--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
+    <header>
+        <img class="logo" src="assets/images/logo.png" alt="logo">
+        <h1>ɪɴsᴘɪʀɪɴɢ ʏᴏᴜ, ᴏɴᴇ ǫᴜᴏᴛᴇ ᴀᴛ ᴀ ᴛɪᴍᴇ ...</h1>
+    </header>
     <div class="container">
-        <img class="header-img" src="assets/images/header.png" alt="header">
-        <h2 class="h2left">"</h2>
         <div id="quoteContainer" style="display:none">
         </div>
-        <h2 class="h2right">"</h2>
         <section>
-            <button id="newQuote" title="display a new quote!">Qυσтє
+            <button id="newQuote" title="𝚍𝚒𝚜𝚙𝚕𝚊𝚢 𝚊 𝚗𝚎𝚠 𝚚𝚞𝚘𝚝𝚎!">Qυσтє
                 <svg class="icon" xmlns="http://www.w3.org/2000/svg" height="20px" viewBox="0 -960 960 960" width="20px" fill="#5f6368"><path d="M440-501Zm0 381L313-234q-72-65-123.5-116t-85-96q-33.5-45-49-87T40-621q0-94 63-156.5T260-840q52 0 99 22t81 62q34-40 81-62t99-22q81 0 136 45.5T831-680h-85q-18-40-53-60t-73-20q-51 0-88 27.5T463-660h-46q-31-45-70.5-72.5T260-760q-57 0-98.5 39.5T120-621q0 33 14 67t50 78.5q36 44.5 98 104T440-228q26-23 61-53t56-50l9 9 19.5 19.5L605-283l9 9q-22 20-56 49.5T498-172l-58 52Zm280-160v-120H600v-80h120v-120h80v120h120v80H800v120h-80Z"/></svg></button>
         </section>
     </div>
